--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <body>
 
     
-  <form name="contact-portfolio" method="post" data-netlify="true" netlify-honeypot="bot-field" hidden>
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
     <input type="text" name="name" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
