Update the form

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="hidden" name="form-name" value="contact" />
     <input type="text" name="name" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
